Supermassive split into separate packages (#236)
Supermassive split into separate packages

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,15 +4,8 @@
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
-    "outDir": "lib",
-    "jsx": "react"
+    "outDir": "lib"
   },
   "include": ["src"],
-  "references": [],
-  "ts-node": {
-    "transpileOnly": true,
-    "compilerOptions": {
-      "module": "CommonJS"
-    }
-  }
+  "references": []
 }
