--- a/packages/relay-apollo-duct-tape/package.json
+++ b/packages/relay-apollo-duct-tape/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "invariant": "^2.2.4",
     "lru-cache": "^7.14.1",
-    "relay-runtime": "^14.0.0"
+    "relay-runtime": "^14.0.0",
+    "relay-compiler": "12.0.0"
   },
   "peerDependencies": {
     "@apollo/client": "^3.6.9"
@@ -29,9 +30,9 @@
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@types/jest": "^26.0.22",
     "@types/relay-runtime": "^14.1.2",
+    "@types/relay-compiler": "^8.0.2",
     "@types/react-relay": "^14.1.1",
-    "monorepo-scripts": "*",
-    "relay-compiler": "^14.0.0"
+    "monorepo-scripts": "*"
   },
   "sideEffects": false,
   "access": "public",
