--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "relay-runtime": "^14.0.0",
     "cross-fetch": "^3.1.5",
     "glob-parent": "^6.0.2",
+    "graphql": "^15.5.0",
     "minimist": "^1.2.6",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
