--- a/packages/relay-apollo-duct-tape/package.json
+++ b/packages/relay-apollo-duct-tape/package.json
@@ -20,8 +20,7 @@
     "@emotion/hash": "^0.8.0",
     "invariant": "^2.2.4",
     "lru-cache": "^7.14.1",
-    "relay-runtime": "^14.0.0",
-    "relay-compiler": "12.0.0"
+    "relay-runtime": "^14.0.0"
   },
   "peerDependencies": {
     "@apollo/client": "^3.6.9"
@@ -33,7 +32,8 @@
     "@types/relay-runtime": "^14.1.2",
     "@types/relay-compiler": "^8.0.2",
     "@types/react-relay": "^14.1.1",
-    "monorepo-scripts": "*"
+    "monorepo-scripts": "*",
+    "relay-compiler": "^14.0.0"
   },
   "sideEffects": false,
   "access": "public",
