Try to not compile the vendored js

--- a/packages/relay-apollo-duct-tape/package.json
+++ b/packages/relay-apollo-duct-tape/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "relay": "relay-compiler",
-    "build": "monorepo-scripts build",
+    "build": "monorepo-scripts build && cp -R ./src/vendor ./lib/",
     "lint": "monorepo-scripts lint",
     "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
