Import original sources without babel stuff

--- a/packages/relay-apollo-duct-tape/tsconfig.json
+++ b/packages/relay-apollo-duct-tape/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "lib",
     "lib": ["esnext", "dom"],
     "jsx": "react",
-    "allowJs": false
+    "allowJs": true
   },
   "include": ["src"],
   "references": []
