--- a/packages/relay-apollo-duct-tape/tsconfig.json
+++ b/packages/relay-apollo-duct-tape/tsconfig.json
@@ -9,5 +9,5 @@
     "jsx": "react"
   },
   "include": ["src"],
-  "references": []
+  "references": [{ "path": "../graphql-codegen-relay-ir-plugin" }]
 }
