--- a/packages/rempl-apollo-devtools/package.json
+++ b/packages/rempl-apollo-devtools/package.json
@@ -18,8 +18,9 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.4.11",
-    "@fluentui/react-components": "9.0.0-rc.9",
+    "@fluentui/react-components": "9.0.0-rc.11",
     "@fluentui/react-tabster": "^9.0.0-rc.7",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/react": "^17.0.2",
@@ -27,9 +28,11 @@
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
+    "apollo-inspector": "^1.7.0",
     "eslint-plugin-react": "^7.25.2",
     "graphiql": "^2.0.9",
     "hotkeys-js": "^3.8.7",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "object-sizeof": "^1.6.1",
