--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "lint": "lage lint",
     "lage": "lage",
     "ci": "yarn lage build types test lint && yarn checkchange",
-    "beachball": "beachball -b origin/main",
+    "beachball": "beachball -b origin/mnovikov/codegen-hacking",
     "change": "yarn beachball change",
     "checkchange": "yarn beachball check",
-    "release": "yarn beachball publish",
+    "release": "yarn beachball publish --tag beta",
     "postinstall": "patch-package"
   },
   "devDependencies": {
