--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -2,6 +2,7 @@ pr: none
 trigger:
   - main
   - apollo-fragment-store-watching
+  - mnovikov/codegen-hacking
 
 variables:
   - group: InfoSec-SecurityResults
