--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "beachball": "^2.20.0",
     "lage": "0.29.1",
     "patch-package": "^6.4.7",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "ts-jest": "^29.0.5"
   },
   "resolutions": {
     "cross-fetch": "^3.1.5",
