--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@graphitation/supermassive-extractors": "^2.0.0",
-    "@graphitation/ts-codegen": "^1.0.2",
+    "@graphitation/ts-codegen": "^2.0.0-beta.0",
     "commander": "^8.3.0",
     "typescript": "^4.4.3 <4.5.0"
   },
