--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/cli",
   "license": "MIT",
-  "version": "1.1.0-beta.5",
+  "version": "1.1.0",
   "bin": {
     "supermassive": "./bin/supermassive.js"
   },
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@graphitation/supermassive-extractors": "^2.0.0",
-    "@graphitation/ts-codegen": "^2.0.0-beta.5",
+    "@graphitation/ts-codegen": "^2.0.0-beta.6",
     "commander": "^8.3.0",
     "typescript": "^4.4.3 <4.5.0"
   },
