--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/cli",
   "license": "MIT",
-  "version": "1.1.0",
+  "version": "1.1.0-5",
   "bin": {
     "supermassive": "./bin/supermassive.js"
   },
