--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/supermassive",
   "license": "MIT",
-  "version": "2.0.5",
+  "version": "2.0.5-3",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
