--- a/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/graphql-codegen-supermassive-typed-document-node-plugin",
   "license": "MIT",
-  "version": "0.1.19-3",
+  "version": "0.1.19-4",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
     "@graphql-codegen/visitor-plugin-common": ">= ^1.17.0 < 2",
     "graphql-tag": ">= 2.11.0 < 3",
     "@graphql-tools/optimize": "^1.0.1",
-    "@graphitation/supermassive": "^2.0.5"
+    "@graphitation/supermassive": "^2.0.5-4"
   },
   "sideEffects": false,
   "access": "public",
