--- a/packages/ts-codegen/package.json
+++ b/packages/ts-codegen/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/ts-codegen",
   "license": "MIT",
-  "version": "2.0.0-beta.9",
+  "version": "2.0.0",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
