--- a/packages/ts-transform-graphql-js-tag/package.json
+++ b/packages/ts-transform-graphql-js-tag/package.json
@@ -16,12 +16,12 @@
     "just": "monorepo-scripts"
   },
   "devDependencies": {
-    "@ts-morph/bootstrap": "0.10.1",
+    "@ts-morph/bootstrap": "0.18.0",
     "@types/jest": "^26.0.22",
     "graphql": "^15.6.1",
     "monorepo-scripts": "*",
     "ts-transformer-testing-library": "^1.0.0-alpha.7",
-    "typescript": "4.3.5"
+    "typescript": "^4.9.0"
   },
   "publishConfig": {
     "main": "./lib/index",
