--- a/packages/rempl-apollo-devtools/package.json
+++ b/packages/rempl-apollo-devtools/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.4.11",
-    "@fluentui/react-components": "9.0.0-rc.11",
-    "@fluentui/react-tabster": "^9.0.0-rc.7",
+    "@fluentui/react-components": "^9.0.0-rc.15",
+    "@fluentui/react-data-grid-react-window": "^9.0.0-beta.14",
+    "@fluentui/react-icons": "2.0.166-rc.3",
+    "@fluentui/react-tabster": "^9.0.0-rc.14",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/react": "^17.0.2",
@@ -27,7 +29,7 @@
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
-    "apollo-inspector": "^1.11.0",
+    "apollo-inspector": "^1.16.3",
     "eslint-plugin-react": "^7.25.2",
     "graphiql": "^2.0.9",
     "hotkeys-js": "^3.8.7",
@@ -40,6 +42,9 @@
     "react-router-dom": "^5.3.3",
     "rempl": "^1.0.0-alpha.24",
     "uuid": "^8.3.2"
+  },
+  "resolutions": {
+    "@fluentui/react-icons": "2.0.166-rc.3"
   },
   "publishConfig": {
     "main": "./dist/apollo-devtools.js",
