--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "version": "1.5.3",
   "bin": {
+    "graphitation": "./bin/graphitation.js",
     "supermassive": "./bin/supermassive.js"
   },
   "repository": {
