Added a tool and CLI command to merge schema using @import dependency resolution

--- a/packages/merge-schemas/.eslintrc.json
+++ b/packages/merge-schemas/.eslintrc.json
@@ -1,4 +1,4 @@
 {
-  "extends": ["../../.eslintrc.json"],
+  "extends": ["../../.eslintrc.json", "plugin:@typescript-eslint/recommended"],
   "root": true
 }
