--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@graphitation/supermassive-extractors": "^2.0.0",
+    "@graphitation/merge-schemas": "^0.1.0",
     "@graphitation/ts-codegen": "^2.4.0",
     "commander": "^8.3.0",
     "typescript": "^4.4.3 <4.5.0"
