--- a/packages/cli/.eslintrc.json
+++ b/packages/cli/.eslintrc.json
@@ -1,4 +1,4 @@
 {
-  "extends": ["../../.eslintrc.json"],
+  "extends": ["../../.eslintrc.json", "plugin:@typescript-eslint/recommended"],
   "root": true
 }
