--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,7 +25,9 @@
     "@graphitation/supermassive-extractors": "^2.1.0",
     "@graphitation/ts-codegen": "^2.4.0",
     "commander": "^8.3.0",
-    "typescript": "^4.4.3 <4.5.0"
+    "typescript": "^4.4.3 <4.5.0",
+    "fast-glob": "^3.2.12",
+    "graphql": "^15.6.1"
   },
   "sideEffects": false,
   "access": "public"
