--- a/packages/graphql-codegen-near-operation-file-preset/package.json
+++ b/packages/graphql-codegen-near-operation-file-preset/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
+    "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts"
   },
