--- a/packages/graphql-codegen-typescript-operations/package.json
+++ b/packages/graphql-codegen-typescript-operations/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
+    "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts"
   },
@@ -20,6 +21,10 @@
     "@graphql-codegen/visitor-plugin-common": "^1.17.22",
     "auto-bind": "~4.0.0",
     "tslib": "~2.0.1"
+  },
+  "devDependencies": {
+    "@graphql-codegen/testing": "1.17.7",
+    "@graphql-codegen/typescript": "^1.18.1"
   },
   "peerDependencies": {
     "graphql": "^15.0.0"
