Fix missing dependencies in schema plugin & payload generator (#295)
* Add graphql as a dependency

* Change files

* Set graphql version to 15.0.0

---------

Co-authored-by: Sammy Cheruiyot <scheruiyot@microsoft.com>

--- a/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "@graphitation/supermassive-extractors": "^2.1.0",
-    "typescript": "^4.4.3 <4.5.0"
+    "typescript": "^4.4.3 <4.5.0",
+    "graphql": "^15.0.0"
   },
   "sideEffects": false,
   "access": "public",
