--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -2,7 +2,7 @@
   "name": "@graphitation/apollo-react-relay-duct-tape",
   "description": "A compatibility wrapper that provides the react-relay API on top of Apollo Client.",
   "license": "MIT",
-  "version": "1.0.1-alpha.6",
+  "version": "1.0.1-alpha.7",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.3.15",
-    "@graphitation/apollo-mock-client": "^0.10.5",
+    "@graphitation/apollo-mock-client": "^0.10.6-0",
     "@graphitation/graphql-js-operation-payload-generator": "^0.8.5",
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@types/jest": "^26.0.22",
