--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.1-0",
   "scripts": {
     "start": "concurrently 'yarn relay --watch' 'yarn serve --progress --color --mode=development'",
-    "build": "webpack --mode production --config webpack.config.ts",
+    "build": "",
     "serve": "webpack serve --config webpack.config.ts",
     "extract-schema": "ts-node --project ./tsconfig-cli.json ../../packages/cli/bin/supermassive.js extract-schema ./src/schema/typeDefs.graphql",
     "generate:interfaces": "ts-node --project ./tsconfig-cli.json ../../packages/cli/bin/supermassive.js generate-interfaces ./src/schema/typeDefs.graphql",
@@ -17,7 +17,7 @@
     "@graphitation/apollo-react-relay-duct-tape": "^1.0.1-alpha.7",
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@graphitation/supermassive": "^2.0.0",
-    "@graphitation/ts-transform-graphql-js-tag": "^0.4.1",
+    "@graphitation/ts-transform-graphql-js-tag": "^1.0.1",
     "concurrently": "^6.5.1",
     "graphql": "^15.6.1",
     "graphql-tools": "^8.2.0",
