--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "declarationMap": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@graphql-tools/utils": ["./node_modules/@graphql-tools/utils"]
+    }
   }
 }
