Move all build bits to compiler package

--- a/packages/apollo-react-relay-duct-tape-compiler/tsconfig.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/tsconfig.json
@@ -10,7 +10,9 @@
   "references": [],
   "ts-node": {
     "transpileOnly": true,
-    "target": "es5",
-    "module": "commonjs"
+    "compilerOptions": {
+      "target": "es5",
+      "module": "commonjs"
+    }
   }
 }
