--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -12,10 +12,10 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "yarn generate-resolver-typings && concurrently 'yarn relay --watch' 'yarn serve'",
+    "start": "yarn generate-resolver-typings && concurrently 'yarn duct-tape-compiler --watch' 'yarn serve'",
     "serve": "webpack serve",
     "build": "webpack",
-    "relay": "graphitation-compiler --schema ./data/schema.graphql --src ./src --printWatchQueries",
+    "duct-tape-compiler": "duct-tape-compiler --schema ./data/schema.graphql --src ./src --printWatchQueries",
     "generate-resolver-typings": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.0.0-alpha.1",
     "@graphql-codegen/cli": "2.2.0",
     "@graphql-codegen/typescript": "2.2.2",
     "@graphql-codegen/typescript-resolvers": "^2.2.1",
@@ -48,10 +49,9 @@
     "concurrently": "^6.2.1",
     "graphql-relay": "^0.10.0",
     "relay-compiler": "^10",
-    "relay-compiler-language-graphitation": "^1.0.0-alpha.4",
-    "ts-loader": "^9.2.6",
+    "ts-loader": "9.3.1",
     "ts-node": "^10.2.1",
-    "typescript": "^4.6.2",
+    "typescript": "4.7.4",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
