--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.7.15",
     "@babel/runtime": "^7.12.0",
     "@graphitation/apollo-react-relay-duct-tape": "^1.0.1-alpha.7",
+    "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.0.0-alpha.1",
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@graphitation/supermassive": "^2.4.6",
     "@graphitation/ts-transform-graphql-js-tag": "^1.0.1",
@@ -26,7 +27,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "relay-compiler": "^12.0.0",
-    "relay-compiler-language-graphitation": "^1.0.0-alpha.4",
     "ts-loader": "^9.0.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.6.2",
