--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@graphitation/apollo-react-relay-duct-tape-compiler",
+  "description": "The build tools to cater to @graphitation/apollo-react-relay-duct-tape's needs.",
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.1",
   "main": "./src/index.ts",
   "bin": {
-    "template": "./src/cli-cjs.js"
+    "duct-tape-compiler": "./src/cli-cjs.js"
   },
   "repository": {
     "type": "git",
@@ -18,16 +19,31 @@
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts"
   },
+  "dependencies": {
+    "@graphitation/graphql-js-tag": "^0.9.0",
+    "@graphql-tools/optimize": "^1.1.1",
+    "relay-compiler": "^12.0.0",
+    "relay-compiler-language-typescript": "^15.0.1",
+    "typescript": "^4.5.0, <4.8.0"
+  },
   "devDependencies": {
+    "@graphitation/graphql-js-tag": "^0.9.0",
+    "@types/dedent": "^0.7.0",
     "@types/jest": "^26.0.22",
+    "@types/relay-compiler": "^8.0.0",
+    "dedent": "^0.7.0",
+    "graphql": "^15.0.0",
     "monorepo-scripts": "*",
+    "relay-test-utils": "^11.0.2",
+    "relay-test-utils-internal": "^11.0.2",
     "ts-node": "^10.4.0"
   },
-  "sideEffects": false,
-  "access": "public",
+  "peerDependencies": {
+    "graphql": "^15.0.0"
+  },
   "publishConfig": {
-    "main": "./lib/index",
-    "types": "./lib/index.d.ts",
+    "main": "./lib/index.js",
+    "access": "public",
     "module": "./lib/index.mjs",
     "exports": {
       ".": {
@@ -36,7 +52,7 @@
       }
     },
     "bin": {
-      "template": "./lib/cli.js"
+      "duct-tape-compiler": "./lib/cli.js"
     }
   }
 }
