--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -15,7 +15,7 @@
     "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts",
-    "relay": "graphitation-compiler --printWatchQueries --schema ./src/__tests__/schema.graphql --src ./src --exclude storeObservation/*FieldPolicy.test.ts"
+    "duct-tape-compiler": "duct-tape-compiler --printWatchQueries --schema ./src/__tests__/schema.graphql --src ./src --exclude storeObservation/*FieldPolicy.test.ts"
   },
   "devDependencies": {
     "@apollo/client": "^3.3.15",
@@ -28,17 +28,13 @@
     "graphql": "^15.0.0",
     "monorepo-scripts": "*",
     "react": "^17.0.2",
-    "relay-compiler": "^11.0.2",
-    "relay-compiler-language-graphitation": "^1.0.0-alpha.4",
-    "ts-expect": "^1.3.0",
-    "typescript": "^4.5.0"
+    "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.0.0-alpha.1",
+    "ts-expect": "^1.3.0"
   },
   "peerDependencies": {
     "@apollo/client": "^3.3.0",
     "graphql": "^15.0.0",
-    "react": "^17.0.2",
-    "relay-compiler-language-graphitation": "^1.0.0-alpha.4",
-    "typescript": "^4.5.0"
+    "react": "^17.0.2"
   },
   "dependencies": {
     "invariant": "^2.2.4",
@@ -54,10 +50,6 @@
       ".": {
         "import": "./lib/index.mjs",
         "require": "./lib/index.js"
-      },
-      "./lib/storeObservation/createImportDocumentsTransform": {
-        "import": "./lib/storeObservation/createImportDocumentsTransform.mjs",
-        "require": "./lib/storeObservation/createImportDocumentsTransform.js"
       }
     }
   }
