--- a/packages/apollo-react-relay-duct-tape-compiler/tsconfig.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/tsconfig.json
@@ -4,7 +4,8 @@
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib",
+    "module": "commonjs"
   },
   "include": ["src"],
   "references": [],
